syntax = "proto3";

option csharp_namespace = "GrpcServer";

import "google/protobuf/wrappers.proto";

package artwork;

service Artwork {
  rpc CreateArtwork (CreateArtworkRequestModel) returns (CreateArtworkResponse);
}

message CreateArtworkRequestModel {
  string galleryId = 1;
  string name = 2;
  double price = 3;
  string currencyIsoCode = 4;
  google.protobuf.Int32Value created = 5;
  string creator = 6;
}

message CreateArtworkResponse {
  string id = 1;
}